--- a/allonsy/allonsy_main/templates/allonsy/user_admin.html
+++ b/allonsy/allonsy_main/templates/allonsy/user_admin.html
@@ -95,7 +95,7 @@
                     <a href="#">Users</a>
                     <ul class="vertical menu">
                       <li><a href="#">Connect User to Location</a></li>
-                      <li><a href="#">Connect User to Organization</a></li>
+                      <li><a href="{% url 'do_assoc_organization_user' %}">Connect User to Organization</a></li>
                     </ul>
                   </li>
                   {% else %}
